--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
 Theme Name: The Bootstrap Blog
-Author: Paweł Nowak
-Author URI: https://www.facebook.com/PawRakiety
+Author: mrpauloen
+Author URI: https://profiles.wordpress.org/mrpauloen/
 Description: Based on the popular Bootstrap 4 library, this theme shows how mobile friendly CSS framework can be used to create sleek, simple, fast and functional websites, with ease and intuitive way in modern front-end web developmen days.
-Version: 0.1.3.1
-Requires at least: 5.0
-Tested up to: 5.5
+Version: 0.1.4
+Requires at least: 5.3
+Tested up to: 5.6
 Requires PHP: 7.0
 Tags: two-columns, custom-menu, custom-background, right-sidebar, custom-header, featured-images, sticky-post, theme-options, threaded-comments, translation-ready, blog
 License: GPLv2 or later
@@ -15,7 +15,7 @@ Domain Path: /languages
 
 == Copyright & License Notes ==
 
- The Bootstrap Blog WordPress Theme, Copyright 2020 Paweł Nowak
+ The Bootstrap Blog WordPress Theme, Copyright 2016 Paweł Nowak
  The Bootstrap Blog is distributed under the terms of the GNU GPL
 
 
@@ -37,6 +37,11 @@ Domain Path: /languages
 
  The Bootstrap Blog Theme bundles the following third-party resources:
 
+*! TwentyTwenty_SVG_Icons class
+ * Copyright: Twenty Twenty WordPress Theme, Copyright 2019-2020 WordPress.org
+ * License: GPLv2 or later
+ * License URI: http://www.gnu.org/licenses/gpl-2.0.html
+
 *! Playfair Display font
  * Copyright: 2017 The Playfair Display Project Authors (https://github.com/clauseggers/Playfair-Display)
  * Licence: SIL Open Font License (OFL)
@@ -51,25 +56,7 @@ Domain Path: /languages
  * Licence URI: https://creativecommons.org/licenses/by-sa/4.0/
  *
 
-*! lock.svg
- * Copyright: Octicons
- * Author URI: https://octicons.github.com/
- * @link: https://octicons.github.com/icon/lock/
- * Licence: MIT
- * Licence URI: https://github.com/primer/octicons/blob/master/LICENSE
- *
-
-*! screenshot.png
- * Copyright:   http://unsplash.com/
- * @link:       https://unsplash.com/photos/E0Spm6XXn2Y
- * Author:      Sergey Zolkin
- * Author URI:  https://unsplash.com/@szolkin
- * License:     CC0
- * Licence URI: https://unsplash.com/license
- *
-
-*!
- * Bootstrap v4.5.2 (https://getbootstrap.com/)
+*! Bootstrap v4.5.3 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
@@ -107,14 +94,17 @@ h4, .h4,
 h5, .h5,
 h6, .h6 {
   font-family: "Playfair Display", Georgia, "Times New Roman", serif;
-  color: #444;
   font-weight: 700;
 }
 /*
  * Override Bootstrap's default container.
  */
-.container {
-  max-width: 60rem;
+.container {max-width: 60rem;}
+.has-custom-header h1, .has-custom-header p{
+    background-color: #343a40d4;
+    display: inline-block;
+    padding: .5rem;
+    color: #fff!important;
 }
 /*
  * Masthead for nav
@@ -128,7 +118,6 @@ h6, .h6 {
 /* Nav links */
 .nav-link {
   position: relative;
-  padding: 1rem;
   font-weight: 500;
   color: #cdddeb;
 }
@@ -160,8 +149,6 @@ h6, .h6 {
 .nav-scroller {
   position: relative;
   z-index: 2;
-  height: 2.75rem;
-  overflow-y: hidden;
 }
 
 .nav-scroller .nav {
@@ -169,7 +156,6 @@ h6, .h6 {
   display: flex;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
-  padding-bottom: 1rem;
   margin-top: 0px;
   overflow-x: auto;
   overflow-y: hidden;
@@ -194,59 +180,15 @@ h6, .h6 {
   line-height: 1;
   border-bottom: 1px solid #e5e5e5;
 }
-.blog-title {
-  margin-bottom: 0;
-  font-size: 2rem;
-  font-weight: 700;
-}
-.blog-description {
-  font-size: 1.1rem;
-  color: #999;
-}
-@media (min-width: 40em) {
-  .blog-title {
-    font-size: 3.5rem;
-    font-weight: 700;
-  }
-}
-/*
- * Main column and sidebar layout
- */
-/* Sidebar modules for boxing content */
-.sidebar-module {
-  padding: 1rem;
-  margin: 0 -1rem 1rem;
-}
-.sidebar-module-inset {
-  padding: 1rem;
-  background-color: #f5f5f5;
-  border-radius: .25rem;
-}
-.sidebar-module-inset p:last-child,
-.sidebar-module-inset ul:last-child,
-.sidebar-module-inset ol:last-child {
-  margin-bottom: 0;
-}
+
 /* Pagination */
-.blog-pagination {
-  margin-bottom: 4rem;
-}
-.blog-pagination > .btn, .round {
-  border-radius: 2rem;
-}
+.blog-pagination {margin-bottom: 4rem;}
+.blog-pagination > .btn, .round {border-radius: 2rem;}
 /*
  * Blog posts
  */
-.blog-post {
-  margin-bottom: 4rem;
-}
-.blog-post-title {
-  font-size: 2.5rem;
-}
-.blog-post-meta {
-  margin-bottom: 1.25rem;
-  color: #999;
-}
+.blog-post {margin-bottom: 4rem;}
+.blog-post-meta {color: #999;}
 /*
  * Footer
  */
@@ -257,54 +199,9 @@ h6, .h6 {
   background-color: #f9f9f9;
   border-top: .05rem solid #e5e5e5;
 }
-.blog-footer p:last-child {
-  margin-bottom: 0;
-}
-
-
-.comment-meta { padding-bottom: 10px }
-#comments > ul li.depth-1 { border-bottom: 1px solid #ededed }
-li.depth-1.parent > .media > .mr-3 > .url > .avatar {
-	border: 2px solid #D9EDF7;
-}
-div.comment-body p { margin-bottom: 0px;}
+.blog-footer p:last-child {margin-bottom: 0;}
 .comment-reply-link {color: #868e96}
-.icon-reply {
-	width: 20px;
-
-}
-textarea.comment-textarea {
-		resize: none;
-}
-.archive-list{margin: 2px 0 1em 0;padding: 5px 0 0 0;left: 0;float: right;max-width: 120px;min-width: 76px;width: 100%;}
-.archive-list a{ text-decoration: none; border-bottom:1px dotted #918f8f; color:#4c4c4c; display:block; line-height:1; height:14px;}
-.archive-list li{ height:21px; list-style:none; margin:0 0 2px 0;}
-.archive-list span{ background:#f8f9fa; padding:0 2px 1px 0;}
-.archive-mounth{ margin-left: 10px;}
-.archive-list .archive-month	{ float:left;}
-.archive-list .archive-count	{ float:right;}
-.control-prev:hover, .control-next:hover {text-decoration: none;}
-.archive-controls {/* position: absolute; */}
-.archive-controls.control-prev {	right: 20px }
-.archive-controls.control-next {	right: 0px }
-img.post-sticky-icon { width: 32px; }
-
-.icon {
-	display: inline-block;
-	text-indent: -9999px;
-}
-a.icon-github,a.icon-twitter,a.icon-facebook {
-	background-size: contain;
-	background-repeat: no-repeat;
-}
-
-a.link-icon {
-	background: url('images/external-link.svg');
-	background-size: 16px 16px;
-	background-repeat: no-repeat;
-	background-position: center right;
-	padding-right: 20px;
-}
+ul.sub-menu { padding-left: 0.5rem; border-left: 1px solid #dee2e6; }
 
 /* =WordPress Core
 -------------------------------------------------------------- */
@@ -404,12 +301,13 @@ a img.aligncenter {
 	z-index: 100000; /* Above WP toolbar. */
 }
 
-
-.sticky {}
+.sticky h2 {padding: 0.5rem 1rem;
+background-color: #343a40;
+color: #f8f9fa;
+}
+.sticky a.read-more{padding-right:.7rem}
 .gallery-caption {}
 .bypostauthor {}
-
-
 .size-auto,
 .size-full,
 .size-large,
@@ -419,7 +317,4 @@ a img.aligncenter {
 	height: auto;
 }
 .widget ul {list-style-type: none; padding-left: 0}.widget ul.children {padding-left: 1.5rem}
-footer ul li{
-list-style: none;
-text-align: left;
-}
+footer ul li{list-style: none;text-align: left;}
