+ bg & text colors

--- a/inc/bootstrap/css/editor-style.css
+++ b/inc/bootstrap/css/editor-style.css
@@ -419,3 +419,66 @@ sub {
 .alert-danger .alert-link {
     color: #843534
 }
+
+/* background */
+.bg-primary {
+    background-color: #007bff!important;
+}
+.bg-secondary {
+    background-color: #6c757d!important;
+}
+.bg-success {
+    background-color: #28a745!important;
+}
+.bg-danger {
+    background-color: #dc3545!important;
+}
+.bg-warning {
+    background-color: #ffc107!important;
+}
+.bg-info {
+    background-color: #17a2b8!important;
+}
+.bg-light {
+    background-color: #f8f9fa!important;
+}
+.bg-dark {
+    background-color: #343a40!important;
+}
+.bg-white {
+    background-color: #fff!important;
+}
+.bg-transparent {
+    background-color: transparent!important;
+}
+/* text-color */
+.text-primary {
+    color: #007bff!important;
+}
+.text-secondary {
+    color: #6c757d!important;
+}
+.text-success {
+    color: #28a745!important;
+}
+.text-danger {
+    color: #dc3545!important;
+}
+.text-warning {
+    color: #ffc107!important;
+}
+.text-info {
+    color: #17a2b8!important;
+}
+.text-light {
+    color: #f8f9fa!important;
+}
+.text-dark {
+    color: #343a40!important;
+}
+.text-muted {
+    color: #6c757d!important;
+}
+.text-white {
+    color: #fff!important;
+}
