--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ Domain Path: /languages
 
 == Copyright & License Notes ==
 
- The Bootstrap Blog WordPress Theme, Copyright 2016 Paweł Nowak
+ The Bootstrap Blog WordPress Theme, Copyright 2016-2021 Paweł Nowak
  The Bootstrap Blog is distributed under the terms of the GNU GPL
 
 
@@ -57,8 +57,8 @@ Domain Path: /languages
  *
 
 *! Bootstrap v4.6.0 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
+ * Copyright 2011-2021 The Bootstrap Authors
+ * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  *
 
