--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: The Bootstrap Blog
 Author: mrpauloen
 Author URI: https://profiles.wordpress.org/mrpauloen/
-Description: Based on the popular Bootstrap 4 library, this theme shows how mobile friendly CSS framework can be used to create sleek, simple, fast and functional websites, with ease and intuitive way in modern front-end web developmen days.
+Description: A simple two-column WordPress theme, built on Bootstrap 4 with custom navigation, header, and type. Based on the popular Bootstrap 4 library, this theme shows how mobile friendly CSS framework can be used to create sleek, simple, fast and functional websites, with ease and intuitive way in modern front-end web developmen days.
 Version: 0.1.5
 Requires at least: 5.5
 Tested up to: 6.0
